double scrollbar issue

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -23,6 +23,7 @@ body {
 html,
 body {
   height: 100%;
+  overflow-y: hidden;
 }
 
 .q-empty-warning {
